# final-project

./: RecruitmentPrediction.xlsx  app.py  distance_calc.ipynb  distances.csv  hs_model.pkl  hs_model_code.ipynb  initial_work.ipynb  jc_datasets.ipynb  model_code.ipynb  non_top.ipynb  pyproject.toml  transfer_datasets.ipynb  transfer_jc_model.pkl  transfer_jc_model_code.ipynb
jc_datasets/: twofive_jc.csv  twofour_jc.csv  twothree_jc.csv
model_predictions/: 247_predictions.csv  espn_predictions.csv
transfer_datasets/: non_top_transfer.csv  twofive_transfer.csv  twofour_transfer.csv  twosix_transfer.csv  twothree_transfer.csv
